fix: make mobile buttons not too small

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -186,8 +186,8 @@ button {
   border: 1px solid var(--color-highlight);
   color: var(--color-highlight);
   text-transform: uppercase;
-  font-size: 0.7rem;
-  padding: 0.1rem 0.2rem;
+  font-size: 1rem;
+  padding: 0.2rem 0.3rem;
   margin: 0;
 }
 
